<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Ll_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxt_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtxt_Fecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Fecha"
            android:focusable="false"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtxt_Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtxt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtxt_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Descripcion"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center|center_horizontal"
        android:onClick="siguinte"
        android:text="@string/btn_Siguiente"
        android:theme="@style/Botones" />


</LinearLayout>